2004-12-7 Tanya Wolff
	incorporated comments from search regression test review
	
2004-11-15 Tanya Wolff
	added selection search tests to regression folder
	
2004-10-13 Tanya Wolff
	added search tests to regression folder

2004-10-4 Andrew Niefer
	created regression source folder and a test framework for search and content assist tests

2004-08-11 Bogdan Gheorghe
	Modified indexer test to work with new forward declartion encoding.
	
2004-08-06 Vladimir Hirsl

	Parser correctness tests in FailedCompleteParseASTTest.java
		testParametrizedTypeDefinition_bug69751(),
		testPredefinedSymbol_bug70928(),
		testUsingOverloadedName_bug71317(),
		testThisInTemplatedMemberFunction_bug71331(),
		testInheritsFromTemplateParameter_bug71410(),
		testTemplateFunctionInsideTemplateType_bug71588(),
		testGNUExternalTemplate_bug71603().

2004-06-09 Alain Magloire

	Patch from Sam Rob to resolve 64022

2004-05-19 Alain Magloire
	New test provided by Sam Rob added for the resolver.

2004-05-03 Bogdan Gheorghe
	Changed search and indexer tests to work with new index enablement
	
2004-04-30 Hoda Amer
	Final fix for bug#57526 : [CModel] CModelElementsTest needs to test STRUCTURAL_PARSE mode as well
	Now All CModel tests run twice, once for quick mode and once for Structural mode (Except for IIncludeTests.java
	
2004-04-26 Hoda Amer
	Partial fix for bug#57526 : [CModel] CModelElementsTest needs to test STRUCTURAL_PARSE mode as well
	Added more tests for Structural Parse to the suit.

2004-04-27 Hoda Amer
	Partial fix for bug#57526 : [CModel] CModelElementsTest needs to test STRUCTURAL_PARSE mode as well
	Added StructuralCModelElementsTest to the suit with the same input as CModelElementsTest,
	but commented some of it as still failing parts.
	
2004-04-23 Hoda Amer
	Patch for Sean Evoy : Removing Managed Build Tests from core tests.
	
2004-04-22 John Camelon
	Added CompleteParseASTTest:testBug47926().

2004-04-22 John Camelon
	Updated test clients for IExpressionParser interface changes.  