@@ -1,3 +1,6 @@
+2005-01-31 Bogdan Gheorghe
+	Patch from Dave Daoust to streamline Index Manager Tests
+	
 2004-12-7 Tanya Wolff
 	incorporated comments from search regression test review
 	
